<?xml version="1.0"?>
<package>
  <name>jaco2_msgs_conversion</name>
  <version>0.0.0</version>
  <description>The jaco2_msgs_conversion package</description>

  <maintainer email="adrian.zwiener@uni-tuebingen.de">Adrian Zwiener</maintainer>

  <license>BSD</license>

  <author email="adrian.zwiener@uni-tuebingen.de">Adrian Zwiener</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>jaco2_data</build_depend>
  <build_depend>jaco2_msgs</build_depend>
  <build_depend>roscpp</build_depend>

  <run_depend>jaco2_data</run_depend>
  <run_depend>jaco2_msgs</run_depend>
  <run_depend>roscpp</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
