<?xml version="1.0"?>
<package>
  <name>jaco2_teleop</name>
  <version>0.0.0</version>
  <description>The jaco2_teleop package</description>

  <maintainer email="adrian.zwiener@uni-tuebingen.de">Adrian Zwiener</maintainer>

  <license>BSD</license>

  <author email="adrian.zwiener@uni-tuebingen.de">Adrian Zwiener</author>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>jaco2_data</build_depend>
  <build_depend>jaco2_kin_dyn_lib</build_depend>
  <build_depend>jaco2_msgs</build_depend>
  <build_depend>jaco2_msgs_conversion</build_depend>
  <build_depend>joy</build_depend>
  <run_depend>jaco2_data</run_depend>
  <run_depend>jaco2_kin_dyn_lib</run_depend>
  <run_depend>jaco2_msgs</run_depend>
  <run_depend>jaco2_msgs_conversion</run_depend>
  <run_depend>joy</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
