<?xml version="1.0"?>
<package>
  <name>jaco2_utils</name>
  <version>0.0.0</version>
  <description>The jaco2_utils package</description>
  <maintainer email="adrian.zwiener@uni-tuebingen.de">Adrian Zwiener</maintainer>

  <license>BSD</license>


  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/jaco2_utils</url> -->

  <author email="adrian.zwiener@uni-tuebingen.de">Adrian Zwiener</author>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>tf</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
